# agent-loop-engineering

./: .agentloop.toml  .env.example  .gitignore  ARCHITECTURE.md  LAYMAN_GUIDE.md  README.md  README_EXPLAINED.md  engine.py  final_fixes.patch  implementation_plan.md  laymans_guide.md  low-level-design-and-coding.md  main.py  my-ideas.txt  project_diary.md  pyproject.toml  requirements.txt  spec.md  task.md  walkthrough.md
.agents/: AGENTS.md
config/: agents.yaml
specs/: 01_database.md  02_backend.md  03_frontend.md  SPEC_FRAMEWORK.md  SPEC_TEMPLATE.md  calculator.md  math.md  task_manager.md
specs/core/: auth-login.md  task-management.md
specs/platform/: tech-stack.md  testing-conventions.md
src/agent_loop_engineering/: __init__.py  agents.py  agents.yaml  cli.py  config.py  layered_spec.py  orchestrator.py  prompts.py  report.py  spec.py  workspace.py
src/agent_loop_engineering/engines/: __init__.py  _openai_common.py  agent_sdk.py  azure_openai.py  base.py  claude_api.py  local.py  registry.py
src/agent_loop_engineering/prompts/: architect.md  architect_revise.md  coder.md  coder_fix.md  conformance_fix.md  conformance_review.md  deployer.md  design_review.md  smoke.md  smoke_write_nudge.md  test_review.md  tester_revise.md  (+2 more)
src/loop_engineering/: __init__.py  cli.py  config.py  display.py  feedback_ui.py  ollama_client.py  prompts.py  tracker.py
tests/: conftest.py  test_cli_env.py  test_config.py  test_design_loop.py  test_layered_spec.py  test_orchestrator.py  test_registry.py  test_smoke.py  test_spec.py  test_workspace.py
utils/: llm.py
(+4 files in other folders)
