[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-engineering"
version = "0.1.0"
description = "End-to-end demo of 3 Key Product Development Loops for AI-driven software engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
loop-eng = "loop_engineering.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engineering"]
